<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>integration_package</name>
  <version>0.0.1</version>
  <description>Integration of Dobot MG400 and RPLIDAR A1M8</description>
  <maintainer email="falk-richard.kallmer@stud.leuphana.de">fkallmer</maintainer>
  <license>Apache-2.0</license>

   <!-- Abhängigkeiten zur Laufzeit -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>mg400_description</depend>
  <depend>std_msgs</depend>
  <depend>mg400_node</depend>
  <depend>xacro</depend>

  <exec_depend>python3-xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
